--- a/style.css
+++ b/style.css
@@ -44,12 +44,18 @@ html {
   .navbar ul li a:hover::before {
     background-color:#A9C52F; /* Color of the underline on hover */
   }
-  
-  #home {
-    background-color: #cbd18f;
-  
-  }
-  
+ 
+#home {
+  background-color: #cbd18f;
+  width: 100vw;
+  height: 1000px;
+  margin-top: 0px;
+background-position: center;
+background-size: cover;
+  background-image: url(home.jpg);
+  position: relative;
+}
+
   .container {
     width: 1200px !important;
     padding: 0 !important;
@@ -115,16 +121,40 @@ html {
     max-width: 470px;
   }
   
-  .home-container {
-      position: relative;
-      top: 40%;
-      left: 10%;
-      color: white;
-  }
-  
   .content  {
   font-size:xx-large;
   }
+
+
+.home-container {
+  position: relative;
+  top: 40%;
+  left: 10%;
+  color: white;
+}
+
+.typewriter h1 {
+overflow: hidden; /* Ensures the content is not revealed until the animation */
+border-right: .15em solid orange; /* The typwriter cursor */
+white-space: nowrap; /* Keeps the content on a single line */
+margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+letter-spacing: .15em; /* Adjust as needed */
+animation: 
+  typing 3.5s steps(40, end),
+  blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+from { width: 0 }
+to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+from, to { border-color: transparent }
+50% { border-color: orange; }
+}
   
   #world-analysis{
     background-color:#2C5D63;
