--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ background-size: cover;
 
 .home-container {
   position: relative;
-  top: 40%;
+  top: 15%;
   left: 10%;
   color: white;
 }
@@ -140,7 +140,7 @@ white-space: nowrap; /* Keeps the content on a single line */
 margin: 0 auto; /* Gives that scrolling effect as the typing happens */
 letter-spacing: .15em; /* Adjust as needed */
 animation: 
-  typing 3.5s steps(40, end),
+  typing 3.5s ,
   blink-caret .75s step-end infinite;
 }
 
@@ -153,15 +153,16 @@ to { width: 100% }
 /* The typewriter cursor effect */
 @keyframes blink-caret {
 from, to { border-color: transparent }
-50% { border-color: orange; }
+50% { border-color: transparent; }
 }
   
-  #world-analysis{
+  #worldwide-analysis{
     background-color:#2C5D63;
   }
   
   #interactive-map{
     position: relative;
+    background-color: #2C5D63;
   }
   
   .map-wrapper {
@@ -173,6 +174,11 @@ from, to { border-color: transparent }
     left: 10%;
     right: 10%;
   }
+
+
+  
+
+
   
   
   
