--- a/style.css
+++ b/style.css
@@ -1,185 +1,262 @@
-html {
-    scroll-behavior: smooth;
-  }
-    body {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-  }
-  
-  .navbar {
-    background-color: #283739;
-    padding: 10px;
-    width: 100vw;
-  }
-  
-  ul {
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .navbar ul li {
-    list-style-type: none;
-  }
-  
-  .navbar ul li a {
-    text-decoration: none;
-    font-family: "Roboto Slab", serif;
-    text-decoration-color: black;
-    color: white;
-    position: relative;
-  }
-  
-  .navbar ul li a::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px; /* Adjust the underline height */
-    top: 30px;
-    left: 0;
-    background-color: transparent;
-    transition: background-color 0.3s ease;
-  }
-  
-  .navbar ul li a:hover::before {
-    background-color:#A9C52F; /* Color of the underline on hover */
-  }
- 
-#home {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.menu {
+  overflow: hidden;
+}
+
+.menu a {
+  float: left;
+  display: block;
+}
+
+.menu a.active {
+  background-color: #04aa6d;
+  color: white;
+}
+
+.menu .menubutton {
+  display: none;
+}
+
+.nav {
+  background-color: #283739;
+  padding: 12px;
+  min-height: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.nav .menu {
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav .menu li {
+  list-style-type: none;
+}
+
+.nav .menu li a {
+  text-decoration: none;
+  font-family: "Roboto Slab", serif;
+  text-decoration-color: black;
+  color: white;
+  position: relative;
+}
+
+.nav .menu li a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px; /* Adjust the underline height */
+  top: 30px;
+  left: 0;
+  background-color: transparent;
+  transition: background-color 0.3s ease;
+}
+
+.nav .menu li a:hover::before {
+  background-color: #a9c52f; /* Color of the underline on hover */
+}
+
+.header {
   background-color: #cbd18f;
-  width: 100vw;
   height: 1000px;
   margin-top: 0px;
-background-position: center;
-background-size: cover;
+  background-position: center;
+  background-size: cover;
   background-image: url(home.jpg);
   position: relative;
 }
 
-  .container {
-    width: 1200px !important;
-    padding: 0 !important;
-    margin-right: auto;
-    margin-left: auto;
-    position: relative;
-  
-  }
-  
-  
-  .container-title {
-    text-align: center;
-    padding: 0 !important;
-    margin-bottom: 40px;
-    font-size: 40px;
-    color: #fff;
-    font-weight: 600;
-    line-height: 60px;
-  }
-  
-  .card {
-    max-width: 1100px;
-    border: 0;
-    width: 100%;
-    margin-inline: auto;
-  }
-  
-  .container-card {
-    position: relative;
-    border: 2px solid transparent;
-    background: linear-gradient(71deg, #080509, #1a171c, #080509);
-    background-clip: padding-box;
-    border-radius: 45px;
-    padding: 40px;
-    img {
-      margin-bottom: 32px;
-    }
-  }
-  
-  .image-card{
-    position:absolute;
-    top: 30px;
-    right:50px;
-    border: 2px solid tan;
-  }
-  
-  
-  .card-title {
-    font-weight: 600;
-    color: white;
-    letter-spacing: -0.02em;
-    line-height: 40px;
-    font-style: normal;
-    font-size: 28px;
-    padding-bottom: 8px;
-  }
-  
-  .card-description {
-    font-weight: 600;
-    line-height: 32px;
-    color: hsla(0, 0%, 100%, 0.5);
-    font-size: 16px;
-    max-width: 470px;
-  }
-  
-  .content  {
-  font-size:xx-large;
-  }
-
-
-.home-container {
-  position: relative;
-  top: 15%;
-  left: 10%;
+.header-container {
+  position: absolute;
+  top: 115px;
+  left: 115px;
   color: white;
 }
 
+.content {
+  font-size: xx-large;
+}
+
+.typewriter {
+  width: 67%;
+}
+
 .typewriter h1 {
-overflow: hidden; /* Ensures the content is not revealed until the animation */
-border-right: .15em solid orange; /* The typwriter cursor */
-white-space: nowrap; /* Keeps the content on a single line */
-margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-letter-spacing: .15em; /* Adjust as needed */
-animation: 
-  typing 3.5s ,
-  blink-caret .75s step-end infinite;
+  /* width: fit-content; */
+  width: 640px;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: 0.15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: 0.15em; /* Adjust as needed */
+  animation: typing 3.5s, blink-caret 0.75s step-end infinite;
 }
 
 /* The typing effect */
 @keyframes typing {
-from { width: 0 }
-to { width: 100% }
+  from {
+    width: 0;
+  }
+  to {
+    width: 640px;
+  }
 }
 
 /* The typewriter cursor effect */
 @keyframes blink-caret {
-from, to { border-color: transparent }
-50% { border-color: transparent; }
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: transparent;
+  }
 }
-  
-  #worldwide-analysis{
-    background-color:#2C5D63;
+
+#worldwide-analysis {
+  background-color: #2c5d63;
+}
+
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  position: relative;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+
+.card {
+  max-width: 1100px;
+  border: 0;
+  width: 85%;
+  margin-inline: auto;
+  margin-bottom: 20px;
+}
+
+.container-card {
+  position: relative;
+  border: 2px solid transparent;
+  background: linear-gradient(71deg, #080509, #1a171c, #080509);
+  background-clip: padding-box;
+  border-radius: 45px;
+  padding: 40px;
+}
+
+.card-title {
+  font-weight: 600;
+  color: white;
+  letter-spacing: -0.02em;
+  line-height: 40px;
+  font-style: normal;
+  font-size: 28px;
+  padding-bottom: 8px;
+}
+
+.card-description {
+  font-weight: 600;
+  line-height: 32px;
+  color: hsla(0, 0%, 100%, 0.5);
+  font-size: 16px;
+  max-width: 470px;
+}
+
+.image-card {
+  border: 2px solid tan;
+}
+
+#interactive-map {
+  position: relative;
+  background-color: #2c5d63;
+}
+
+.map-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  justify-content: center;
+  text-align: center;
+  /* padding: 40px 40px; */
+  color: white;
+  /* font-size: x-large; */
+}
+
+#map {
+  width: 85vw;
+  height: 500px;
+  border-radius: 15px;
+}
+
+@media only screen and (max-width: 800px) {
+  .content {
+    font-size: x-large;
   }
-  
-  #interactive-map{
+}
+
+@media only screen and (max-width: 600px) {
+  .menu li {
+    display: none;
+  }
+
+  .menu li.menubutton {
+    float: right;
+    display: block;
+  }
+
+  .menu.responsive {
     position: relative;
-    background-color: #2C5D63;
   }
-  
-  .map-wrapper {
-    padding: 40px 40px;
-  }
-  .map {
-    width: 70vw;
+
+  .menu.responsive .menubutton {
     position: absolute;
-    left: 10%;
-    right: 10%;
+    right: 0;
+    top: 0;
+  }
+  .menu.responsive li {
+    float: none;
+    display: block;
+    text-align: left;
   }
 
+  .nav .menu {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: 20px;
+  }
 
-  
+  .header {
+    height: 100vh;
+  }
 
+  .content {
+    font-size: small;
+  }
 
-  
-  
-  
-  
+  .home-container {
+    position: absolute;
+    top: 55px;
+    left: 55px;
+    color: white;
+  }
+
+  .typewriter h1 {
+    width: 270px;
+  }
+
+  /* The typing effect */
+  @keyframes typing {
+    from {
+      width: 0px;
+    }
+    to {
+      width: 270px;
+    }
+  }
+}
